--- a/src/jetty/WEB-INF/web.xml
+++ b/src/jetty/WEB-INF/web.xml
@@ -9,6 +9,17 @@
         <param-name>resteasy.scan</param-name>
         <param-value>true</param-value>
     </context-param>
+    
+ <listener>
+    <listener-class>org.jboss.errai.container.CDIServletStateListener</listener-class>
+  </listener>	
+  
+  
+  <resource-env-ref>
+    <description>Object factory for the CDI Bean Manager</description>
+    <resource-env-ref-name>BeanManager</resource-env-ref-name>
+    <resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+  </resource-env-ref>    
 
     <!-- We have to register RestEasy providers manually during integration testing because the scan doesn't see them. -->
     <context-param>
